[project]
name = "langgraph-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "langgraph-prebuilt>=1.0.1",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.38",
    "notebook>=7.4.7",
    "tavily-python>=0.7.12",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
